extra-manifest-examples/fmnt-traefik-ingress.yaml
# This is the Traefik Middleware to pass the client certificate to the backend in pem format
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mainjobs-poa-des-passtlsclientcert
spec:
  passTLSClientCert:
    pem: true
---
# This is the Traefik IngressRoute for the mainjobs-poa-admin /certificate-access path that requires a client certificate
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mainjobs-poa-des-custom-ingress-cert
spec:
  tls:
    secretName: mainjobs-poa-cert
    options:
      name: mainjobs-poa-des-clientcert-tls
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mainjobs-poa-cert.k8s.local`) && PathPrefix(`/certificate-access`)
      services:
        - name: dc-mainjobs-poa-portal-objetos-aprendizaje-admin-service # The first part of this service name depends on your Helm release name
          port: 80
      middlewares:
        - name: mainjobs-poa-des-passtlsclientcert
---
# These are the ususal Traefik IngressRoutes for the mainjobs-poa-web and mainjobs-poa-admin domains
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mainjobs-poa-des-custom-ingress
spec:
  tls:
    secretName: mainjobs-poa-cert
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mainjobs-poa-web.k8s.local`)
      services:
        - name: dc-mainjobs-poa-portal-objetos-aprendizaje-web-service # The first part of this service name depends on your Helm release name
          port: 80
    - kind: Rule
      match: Host(`mainjobs-poa-admin.k8s.local`)
      services:
        - name: dc-mainjobs-poa-portal-objetos-aprendizaje-admin-service # The first part of this service name depends on your Helm release name
          port: 80
